# nx-plugin

./: README.md
metadata_sdk/: build_samples_custom.bat  check_service.bat  setupEnvThirdParty.sh
metadata_sdk/docs/html/: action__response_8h_source.html  actions_8h_source.html  active__setting__changed__action_8h_source.html  active__setting__changed__response_8h_source.html  active__settings__rules_8h_source.html  analytics_2i__plugin_8h_source.html  annotated.html  attribute_8h_source.html  classes.html  classnx_1_1kit_1_1_output_redirector.html  classnx_1_1sdk_1_1_action_response-members.html  classnx_1_1sdk_1_1_action_response.html  classnx_1_1sdk_1_1_active_setting_changed_action-members.html  classnx_1_1sdk_1_1_active_setting_changed_action.html  classnx_1_1sdk_1_1_active_setting_changed_response-members.html  classnx_1_1sdk_1_1_active_setting_changed_response.html  classnx_1_1sdk_1_1_attribute-members.html  classnx_1_1sdk_1_1_attribute.html  classnx_1_1sdk_1_1_device_info-members.html  classnx_1_1sdk_1_1_device_info.html  classnx_1_1sdk_1_1_i_action_response-members.html  classnx_1_1sdk_1_1_i_action_response.html  classnx_1_1sdk_1_1_i_active_setting_changed_action-members.html  classnx_1_1sdk_1_1_i_active_setting_changed_action.html  classnx_1_1sdk_1_1_i_active_setting_changed_response-members.html  classnx_1_1sdk_1_1_i_active_setting_changed_response.html  classnx_1_1sdk_1_1_i_attribute-members.html  classnx_1_1sdk_1_1_i_attribute.html  classnx_1_1sdk_1_1_i_device_info-members.html  classnx_1_1sdk_1_1_i_device_info.html  classnx_1_1sdk_1_1_i_list-members.html  classnx_1_1sdk_1_1_i_list.html  classnx_1_1sdk_1_1_i_plugin-members.html  classnx_1_1sdk_1_1_i_plugin.html  classnx_1_1sdk_1_1_i_plugin_diagnostic_event-members.html  classnx_1_1sdk_1_1_i_plugin_diagnostic_event.html  classnx_1_1sdk_1_1_i_ref_countable-members.html  (+301 more)
metadata_sdk/samples/detection_analytics_plugin/: CMakeLists.txt  conanfile.py
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/: Logger.cpp  Logger.h  Rece_data_socket.cpp  Rece_data_socket.h  data.cpp  data.h  i_SDK_connection.h  i_camera.h  json11.cpp  json11.hpp  main.cpp  utils.cpp  utils.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/face_detection_renovation/: camera_manager.cpp  camera_manager.h  define_var.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  i_event_controller.cpp  i_event_controller.h  plugin.cpp  plugin.h  settings_model.h  stub_analytics_plugin_FaceDetection_ini.cpp  stub_analytics_plugin_FaceDetection_ini.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/face_detection_renovation/dahua_camera/: dahua_SDK_connection.cpp  dahua_SDK_connection.h  dahua_camera.cpp  dahua_camera.h  dahua_event_controller.cpp  dahua_event_controller.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/face_detection_renovation/objects/: abstract_obj.cpp  abstract_obj.h  face_detection_obj.cpp  face_detection_obj.h  face_recognition_obj.cpp  face_recognition_obj.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/face_detection_renovation/oryza_camera/: Websocket.cpp  Websocket.h  WorkerThread.cpp  WorkerThread.h  oryza_SDK_conection.cpp  oryza_SDK_connection.h  oryza_camera.cpp  oryza_camera.h  oryza_event_controller.cpp  oryza_event_controller.h  socket.cpp  socket.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/traffic_plate/: camera_manager.cpp  camera_manager.h  define_var.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  i_event_controller.cpp  i_event_controller.h  plugin.cpp  plugin.h  stub_analytics_plugin_TrafficPlate_ini.cpp  stub_analytics_plugin_TrafficPlate_ini.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/traffic_plate/dahua_camera/: dahua_SDK_connection.cpp  dahua_SDK_connection.h  dahua_camera.cpp  dahua_camera.h  dahua_event_controller.cpp  dahua_event_controller.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/traffic_plate/objects/: abstract_obj.cpp  abstract_obj.h  traffic_plate_obj.cpp  traffic_plate_obj.h
metadata_sdk/samples/detection_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/traffic_plate/oryza_camera/: Websocket.cpp  Websocket.h  WorkerThread.cpp  WorkerThread.h  oryza_SDK_conection.cpp  oryza_SDK_connection.h  oryza_camera.cpp  oryza_camera.h  oryza_event_controller.cpp  oryza_event_controller.h  socket.cpp  socket.h
metadata_sdk/src/: nx_sdk_version.inc
(+30 files in other folders)
